Closed Bug 1572573 Opened 5 years ago Closed 5 years ago

Printing page with large table fails to display anything after the first page.

Categories

(Core :: Printing: Output, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox-esr68 --- wontfix
firefox71 --- wontfix
firefox72 --- wontfix
firefox73 --- fixed

People

(Reporter: u480271, Assigned: MatsPalmgren_bugz)

References

(Blocks 1 open bug, )

Details

(Keywords: dataloss, testcase, Whiteboard: [layout:print-triage:p1][frag2020_v73])

Attachments

(5 files)

Trying to print https://nihongoichiban.com/2011/04/10/complete-list-of-kanji-for-jlpt-n5/ results in 10 pages, where 9 pages are blank except for header and footer.

The priority flag is not set for this bug.
:jwatt, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jwatt)
Flags: needinfo?(jwatt)
Keywords: dupeme
Priority: -- → P2
Whiteboard: [layout:print-triage:p1]
Attached file testcase 1 (reduced)

Here's a reduced testcase. The key features seem to be: two nested overflow:hidden divs, with a float inside of it, with tall content inside of that.

The tall content is truncated at the bottom of the first page.

Blocks: 1601429
Assignee: nobody → mats
Keywords: dupemedataloss, testcase
OS: macOS → All
Hardware: x86_64 → All
Depends on: 1602430
Attached file Testcase 2
Attached file Testcase 3

So the reason we get the current bogus result is that overflow:hidden
are block-formatting contexts (BFC) and in paginated mode they are
implemented as block frames with NS_BLOCK_CLIP_PAGINATED_OVERFLOW
to do the clipping. When we have a child float that doesn't fit,
we split it and currently we report that as Overflow-Incomplete
(which is correct for a normal block, but not a BFC) which leads
to creating an overflow-container continuation which has zero
size which we then clip. We should report it as Incomplete
instead, except if we already are an overflow-container.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Whiteboard: [layout:print-triage:p1] → [layout:print-triage:p1][frag_v73]
Whiteboard: [layout:print-triage:p1][frag_v73] → [layout:print-triage:p1][frag2020_v73]
Regressions: 1670352
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: