Bug 1572573 - Pushed floats should make block-formatting contexts incomplete, not overflow-incomplete.  r=TYLin

So the reason we get the current bogus result is that overflow:hidden
are block-formatting contexts (BFC) and in paginated mode they are
implemented as block frames with NS_BLOCK_CLIP_PAGINATED_OVERFLOW
to do the clipping.  When we have a child float that doesn't fit,
we split it and currently we report that as Overflow-Incomplete
(which is correct for a normal block, but not a BFC) which leads
to creating an overflow-container continuation which has zero
size which we then clip.  We should report it as Incomplete
instead, except if we already are an overflow-container.

Differential Revision: https://phabricator.services.mozilla.com/D56416

--HG--
extra : moz-landing-system : lando